# sa4e_ws2425

./: .gitignore  README.md  pyproject.toml
U1/task_1_src/: ex_1_task_1.py
U1/task_2_src/: firefly.proto  firefly.py  firefly_pb2.py  firefly_pb2_grpc.py  main.py
U2/: loadtest.py  useful_commands
U2/camel_task/: pom.xml
U2/camel_task/src/main/java/com/example/: XmasCamelApp.java  XmasOcrRoute.java
U2/xmaswishes/: Dockerfile  app.py  docker-compose.yml  docker-stack.yml  requirements.txt  sync_nordpol.py
U3/: README.md  circular-course.py  docker-compose.yml  generate_architecture.py  run_all.bat  run_all.sh  tracks.json
